# tompa

./: .editorconfig  Cargo.toml  README.MD
src/: lib.rs  main.rs
src/ast/: instructions.rs  mod.rs  modules.rs  types.rs
src/defs/: mod.rs
src/format/: input.rs  instructions.rs  mod.rs  values.rs
src/format/binary/: instructions.rs  mod.rs  modules.rs  types.rs  values.rs
src/format/text/: error.rs  instructions.rs  keywords.rs  mod.rs  parser.rs
src/format/text/lexer/: keyword.rs  mod.rs
src/format/text/parser/: instructions.in  instructions.rs  lexical.rs  mod.rs  types.rs  values.rs
src/parser/: mod.rs
src/span/: mod.rs
src/syntax/: instructions.rs  mod.rs  modules.rs  types.rs
src/typing/: instructions.rs  mod.rs  modules.rs  types.rs
src/validation/: instructions.rs  mod.rs  modules.rs  types.rs
