[package]
name = "tompa"
version = "0.1.0"
authors = ["Dávid Szakállas <david.szakallas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[bin]
#proc-macro = true

[dependencies]
im-rc = "13.0.0"
nom = "5.0.1"
num = "0.2.0"
ena = "0.13.1"
lexical-core = { version = "0.6.0", features = ["radix"] }
phf = { version = "0.7", features = ["macros"] }

